[project]
name = "sage-memory"
version = "0.5.0"
description = "Ultrafast local MCP memory for LLMs — project-aware, zero-config"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
neural = ["fastembed>=0.4.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
sage-memory = "sage_memory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sage_memory"]
